workspace/correlation_ver2_axis/.metadata/.plugins/org.eclipse.core.resources/.history/f0/42cda7484be200161a93cfd3079a182a
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2014.4
Copyright (C) 2014 Xilinx Inc. All rights reserved.

==============================================================

@I [HLS-10] Setting target device to ' xc7z020clg484-1 '
@I [SYN-201] Setting up clock 'default' with a period of 5.95ns.
@I [HLS-10] Analyzing design file '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp' ... 
@E [HLS-70] Compilation errors found:
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:284:12: error: use of undeclared identifier 'conv1'
           conv1.ival   = in_indices[0].data;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:285:27: error: use of undeclared identifier 'conv1'
           shift_reg[1] = conv1.floatval;
                          ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:286:12: error: use of undeclared identifier 'tmp1'
           tmp1.keep    = in_indices[0].keep;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:287:12: error: use of undeclared identifier 'tmp1'
           tmp1.strb    = in_indices[0].strb;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:288:12: error: use of undeclared identifier 'tmp1'
           tmp1.user    = in_indices[0].user;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:289:12: error: use of undeclared identifier 'tmp1'
           tmp1.last    = in_indices[0].last;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:290:12: error: use of undeclared identifier 'tmp1'
           tmp1.id      = in_indices[0].id;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:291:12: error: use of undeclared identifier 'tmp1'
           tmp1.dest    = in_indices[0].dest;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:301:16: error: use of undeclared identifier 'conv1'
               conv1.ival               = in_indices[i].data;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:302:32: error: use of undeclared identifier 'conv1'
               shift_reg[0]     = conv1.floatval;
                                  ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:303:16: error: use of undeclared identifier 'tmp1'
               tmp1.keep                = in_indices[i].keep;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:304:16: error: use of undeclared identifier 'tmp1'
               tmp1.strb                = in_indices[i].strb;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:305:16: error: use of undeclared identifier 'tmp1'
               tmp1.user                = in_indices[i].user;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:306:16: error: use of undeclared identifier 'tmp1'
               tmp1.last                = in_indices[i].last;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:307:16: error: use of undeclared identifier 'tmp1'
               tmp1.id                  = in_indices[i].id;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:308:16: error: use of undeclared identifier 'tmp1'
               tmp1.dest                = in_indices[i].dest;
               ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:312:5: error: use of undeclared identifier 'conv1'
                                conv1.ival      = in_indices[i].data;
                                ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:313:32: error: use of undeclared identifier 'conv1'
                shift_reg[0]    = conv1.floatval;
                                  ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:314:17: error: use of undeclared identifier 'tmp1'
                tmp1.keep               = in_indices[i].keep;
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
@I [LIC-101] Checked in feature [HLS]
